--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "wake.compiler.solc.remappings": [
-        "forge-std/=lib/forge-std/src/"
+        "@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/",
+        "@foundry-devops/=lib/foundry-devops/",
+        "chainlink-brownie-contracts/=lib/chainlink-brownie-contracts/",
+        "forge-std/=lib/forge-std/src/",
+        "foundry-devops/=lib/foundry-devops/"
     ]
 }
