--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
+    '@foundry-devops/=lib/foundry-devops/'
+    ]
+# the line below will allow foundry to run commands in our terminal; unless otherwise it should be set to false, 
+# we set it to true whenever we want to run a bash script or sth like that
+# ffi = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
